--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "todo_react_app",
+	"name": "to-do-app",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://javascriptbear.github.io/todo_react_app",
+	"homepage": "",
 	"dependencies": {
 		"@mantine/core": "^4.2.12",
 		"@mantine/hooks": "^4.2.12",
